some trans, auth restructure, logout

--- a/src/utils/i18n/locales/en/translations.json
+++ b/src/utils/i18n/locales/en/translations.json
@@ -35,5 +35,8 @@
 	"download" : "Download",
 	"loading": "Loading...",
 	"signout": "Sign Out",
-	"language": "Language"
+	"language": "Language",
+	"planning_center": "Planning Center",
+	"create_pco": "Create {{query}} on Planning Center",
+	"create" : "Create new {{query}}"
 }
