--- a/src/utils/i18n/locales/es/translations.json
+++ b/src/utils/i18n/locales/es/translations.json
@@ -19,14 +19,14 @@
 	"income":"Entradas",
 	"tithes":"Diezmos",
 	"individual_report_title": "Reporte Individual",
-	"individual_report_title_generated": "Reporte Individual para ",
+	"individual_report_title_generated": "Reporte de Donacion: ",
 	"individual_report_desc": "Rápidamente genere reportes para individuales en cualquier rango de fechas.",
-	"general_report_title": "Reporte General de Diezmos y Ofrendas",
+	"general_report_title": "Reporte General",
 	"general_report_title_generated": "Reporte General",
-	"general_report_desc": "Reportes línea por línea sobre cada donación realizada dentro del rango de fechas especificado. ¡O cree un reporte agregado para ver quiénes son sus mayores donantes!",
-	"income_expense_report_title": "Reporte de Donaciones y Gastos",
+	"general_report_desc": "Reportes línea por línea sobre cada entrada or salida realizada dentro del rango de fechas especificado. ¡O cree un reporte agregado para ver quiénes son sus mayores donantes!",
+	"income_expense_report_title": "Reporte de Entradas y Salidas",
 	"income_expense_report_title_generated": "Reporte de Donaciones y Gastos desde ",
-	"income_expense_report_desc": "Reportes detallados línea por línea de los ingresos y gastos de la iglesia. O cambie a una vista agregada para ver sus mejores días de ingresos o sus mayores gastos.",
+	"income_expense_report_desc": "Reportes detallados línea por línea de las entradas y salidas de la iglesia. O cambie a una vista agregada para ver sus mejores días de ingresos o sus mayores gastos.",
 	"district_report_title": "Reporte para el Distrito Metro New York",
 	"district_report_title_generated": "Reporte para el Distrito Metro New York",
 	"district_report_desc": "Genere reportes agregados sobre donaciones y gastos, así como los totales de diezmos. Bueno para Metro New York District.",
@@ -38,5 +38,8 @@
 	"language": "Idioma",
 	"planning_center": "Planning Center",
 	"create_pco": "Crear {{query}} en Planning Center",
-	"create" : "Crear {{query}}"
+	"create" : "Crear {{query}}",
+	"filterby_donation_type": "Filtrar por tipo de Donacion",
+	"filterby_expense_type": "Filtrar por tipo de Gasto",
+	"secretary":"Secretaria"
 }
