settings, modals, detailed rep, pdf fixes

--- a/src/utils/i18n/locales/en/translations.json
+++ b/src/utils/i18n/locales/en/translations.json
@@ -46,5 +46,26 @@
 	"female": "Female",
 	"first_name": "First",
 	"last_name": "Last",
-	"add_a_person": "New Person"
+	"add_a_person": "New Person",
+	"settings": "Settings",
+	"are_you_sure_create": "Are you sure you want to create this?",
+	"cancel": "Cancel",
+	"detailed_report_title": "Detailed Report",
+	"detailed_report_desc": "generate reports with much more granular data. Great for weekly reports!",
+	"detailed_report_title_generated": "Detailed Report",
+	"totals_by_donation_type": "Totals by Donation Type",
+	"totals_by_expense_type": "Totals by Expense Type",
+	"totals_by_source": "Totals by Donation Source",
+	"total": "Total",
+	"attendance": "Attendance",
+	"adults": "Adults",
+	"kids": "Kids",
+	"visitors": "Visitors",
+	"converted": "Converted",
+	"communion": "Communion",
+	"counted_by": "Counted by",
+	"supervisor": "Supervisor",
+	"totals_by_method": "Totals By Method",
+	"coming_soon": "Coming Soon",
+	"delete_options": "Delete Tool"
 }
