--- a/src/utils/i18n/locales/es/translations.json
+++ b/src/utils/i18n/locales/es/translations.json
@@ -31,7 +31,7 @@
 	"district_report_title_generated": "Reporte para el Distrito Metro New York",
 	"district_report_desc": "Genere reportes agregados sobre donaciones y gastos, así como los totales de diezmos. Bueno para Metro New York District.",
 	"generate_report": "Generar Reporte",
-	"aggregate_data": "Agregar datos",
+	"aggregate_data": "Acumular datos",
 	"download" : "Descarga",
 	"loading": "Cargando..",
 	"signout": "Cerrar Sesión",
@@ -46,5 +46,26 @@
 	"female": "Mujer",
 	"first_name": "Nombre",
 	"last_name": "Apellido",
-	"add_a_person": "Nueva Persona"
+	"add_a_person": "Nueva Persona",
+	"settings": "Ajustes",
+	"are_you_sure_create": "Estas seguro que quieres crear esto?",
+	"cancel": "Cancelar",
+	"detailed_report_title": "Reporte Detallado",
+	"detailed_report_desc": "Reportes generales con mas informacion. Bueno para Reportes Semanales.",
+	"detailed_report_title_generated": "Reporte Detallado",
+	"totals_by_donation_type": "Totales por Tipo de Donacion",
+	"totals_by_source": "Totales por Origen",
+	"totals_by_expense_type": "Totales por Tipo de Gasto",
+	"total": "Total",
+	"attendance": "Asistencia",
+	"adults": "Adultos",
+	"kids": "Niños",
+	"visitors": "Visitas",
+	"converted": "Convertidos",
+	"communion": "Santa Cena",
+	"counted_by": "Contado por",
+	"supervisor": "Supervisor",
+	"totals_by_method": "Totales por Método de Pago",
+	"coming_soon": "Muy Pronto",
+	"delete_options": "Borrador"
 }
