--- a/src/utils/i18n/locales/en/translations.json
+++ b/src/utils/i18n/locales/en/translations.json
@@ -67,5 +67,8 @@
 	"supervisor": "Supervisor",
 	"totals_by_method": "Totals By Method",
 	"coming_soon": "Coming Soon",
-	"delete_options": "Delete Tool"
+	"delete_options": "Delete Tool",
+	"are_you_sure_delete": "Are you sure you want to delete this?",
+	"delete_row": "Delete Row",
+	"total_tithes_offerings": "Total (only Tithes and Offerings)"
 }
