--- a/src/utils/i18n/locales/en/translations.json
+++ b/src/utils/i18n/locales/en/translations.json
@@ -70,5 +70,7 @@
 	"delete_options": "Delete Tool",
 	"are_you_sure_delete": "Are you sure you want to delete this?",
 	"delete_row": "Delete Row",
-	"total_tithes_offerings": "Total (only Tithes and Offerings)"
+	"total_tithes_offerings": "Total (only Tithes and Offerings)",
+	"home": "Home",
+	"wednesday": "Wednesday"
 }
