--- a/src/utils/i18n/locales/es/translations.json
+++ b/src/utils/i18n/locales/es/translations.json
@@ -70,6 +70,8 @@
 	"delete_options": "Borrador",
 	"are_you_sure_delete": "Estas seguro que quieres borrar esto?",
 	"delete_row": "Borrar linea",
-	"total_tithes_offerings": "Total (solo Diezmos y Ofrendas)"
+	"total_tithes_offerings": "Total (solo Diezmos y Ofrendas)",
+	"home": "Inicio",
+	"wednesday": "Miercoles"
 
 }
