--- a/src/utils/i18n/locales/es/translations.json
+++ b/src/utils/i18n/locales/es/translations.json
@@ -72,6 +72,10 @@
 	"delete_row": "Borrar linea",
 	"total_tithes_offerings": "Total (solo Diezmos y Ofrendas)",
 	"home": "Inicio",
-	"wednesday": "Miercoles"
+	"wednesday": "Miercoles",
+	"filter": "Filtrar",
+	"apply" : "Aplicar Cambios",
+	"filter_options": "Opciones de Filtro",
+	"filters_on": "Filtros estan ACTIVOS"
 
 }
