custom title for individual report

--- a/src/utils/i18n/locales/en/translations.json
+++ b/src/utils/i18n/locales/en/translations.json
@@ -76,5 +76,6 @@
 	"filter": "Filter",
 	"apply" : "Apply Changes",
 	"filter_options": "Filter Options",
-	"filters_on": "Filters are ON"
+	"filters_on": "Filters are ON",
+	"custom_title": "Custom Title"
 }
